--- a/BasicWebProject/index.cshtml
+++ b/BasicWebProject/index.cshtml
@@ -41,10 +41,12 @@
                 <td>@dr["genre"]</td>
                 <td>@dr["time"]</td>
                 <td>@dr["file"]</td>
+                <td><a href="~/pages/Deletesong.cshtml?id=@dr["id"]">Verwijderen</a></td>
             </tr>
         }
         </table>
-
+    <br /><br />
+    <a href="pages/Createsong.cshtml">Een nieuwe song toevoegen</a>
 </body>
 
 </html>
