--- a/BasicWebProject/pages/Createsong.cshtml
+++ b/BasicWebProject/pages/Createsong.cshtml
@@ -17,5 +17,56 @@
 </head>
 <body>
 
+    <form method="POST">
+        <table>
+            <tr>
+                <td>ID</td>
+                <td><input type="text" name="id" size="25"></td>
+            </tr>
+            <tr>
+                <td>Artiest</td>
+                <td><input type="text" name="artist" size="25"></td>
+            </tr>
+            <tr>
+                <td>Titel</td>
+                <td><input type="text" name="title" size="25"></td>
+            </tr>
+            <tr>
+                <td>Jaar</td>
+                <td><input type="text" name="year" size="25"></td>
+            </tr>
+            <tr>
+                <td>Genre</td>
+                <td><input type="text" name="genre" size="25"></td>
+            </tr>
+            <tr>
+                <td>Tijd</td>
+                <td><input type="text" name="time" size="25"></td>
+            </tr>
+            <tr>
+                <td>File</td>
+                <td><input type="text" name="file" size="25"></td>
+            </tr>
+            <tr>
+                <td><input type="submit" name="submit" value="Save"></td>
+            </tr>
+        </table>
+        </form>
+
+    @if (IsPost)
+    {
+        DataRow dr = mySongMethodes.GetEmptyDataRow();
+
+        dr[0] = Request.Form["id"];
+        dr[1] = Request.Form["artist"];
+        dr[2] = Request.Form["title"];
+        dr[3] = Request.Form["year"];
+        dr[4] = Request.Form["genre"];
+        dr[5] = Request.Form["time"];
+        dr[6] = Request.Form["file"];
+
+        mySongMethodes.CreateSong(dr, file);
+        Response.Redirect(@"~/index.cshtml");
+    }
 </body>
 </html>
