--- a/BasicWebProject/pages/Deletesong.cshtml
+++ b/BasicWebProject/pages/Deletesong.cshtml
@@ -21,11 +21,11 @@
 
             <tr>
                 <td>Ja</td>
-                <td><input type="radio" name="ja" value="ja" checked></td>
+                <td><input type="radio" name="keuze" value="ja" checked></td>
             </tr>
-            <tr> 
+            <tr>
                 <td>Nee</td>
-                <td><input type="radio" name="ja" value="nee"></td>
+                <td><input type="radio" name="keuze" value="nee"></td>
             </tr>
             <tr>
                 <td><input type="submit" name="submit" value="Verder"></td>
