--- a/BasicWebProject/index.cshtml
+++ b/BasicWebProject/index.cshtml
@@ -3,7 +3,6 @@
 @using System.Data;
 @using BasicWebProject.App_Code;
 
-
 @{
     songMethodes mySongMethodes = new songMethodes();
     string file = @"~\App_Data\Playlist.xml";
@@ -12,15 +11,24 @@
     Session["file"] = file;
 }
 
+
 <html>
 <head>
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    <script src="~/Scripts/bootstrap.js"></script>
+    <script src="~/Scripts/jquery-3.0.0.js"></script>
 </head>
 <body>
-    <br /><br />
+   
 
-    <table class="table-bordered">
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="display-4">Hallo</h1>
+            <p class="lead">test</p>
+        </div>
+    </div>
+
+    <table class="table-bordered"  >
         <tr>
             <th>Id</th>
             <th>Artist</th>
@@ -30,21 +38,22 @@
             <th>Time</th>
             <th>File</th>
         </tr>
-
-        @foreach (DataRow dr in ds.Tables["songs"].Rows) 
+        
+        @foreach (DataRow dr in ds.Tables["songs"].Rows)
         {
-            <tr>
-                <td>@dr["id"]</td>
-                <td>@dr["artist"]</td>
-                <td>@dr["title"]</td>
-                <td>@dr["year"]</td>
-                <td>@dr["genre"]</td>
-                <td>@dr["time"]</td>
-                <td>@dr["file"]</td>
-                <td><a href="~/pages/Deletesong.cshtml?id=@dr["id"]">Verwijderen</a></td>
-            </tr>
+    <tr>
+        <td>@dr["id"]</td>
+        <td>@dr["artist"]</td>
+        <td>@dr["title"]</td>
+        <td>@dr["year"]</td>
+        <td>@dr["genre"]</td>
+        <td>@dr["time"]</td>
+        <td>@dr["file"]</td>
+        
+       <td> <a href="~/pages/Deletesong.cshtml?id=@dr["id"]">Verwijderen</a></td>
+    </tr>
         }
-        </table>
+    </table>
     <br /><br />
     <a href="pages/Createsong.cshtml">Een nieuwe song toevoegen</a>
 </body>
