--- a/BasicWebProject/Content/dialog.css
+++ b/BasicWebProject/Content/dialog.css
@@ -7,6 +7,18 @@ table{
     
 }
 
+#content{
+    display: none;
+}
+
+#test{
+    background-color:red;
+    width: 250px;
+    margin-left: 5%;
+}
+
+
+
 #createsong{
     background-color: lightgray;
     width: 250px;
@@ -18,25 +30,33 @@ table{
     display: flex;
     flex-direction: column;
     z-index: 11;
-    position: absolute;
+    position: fixed;
     left: calc(50vw - 200px);
-    top: -350px;
-    height: 200px;
-    transition: top 0.6s;
-    width: 400px;
+    top: -450px;
+    height: 250px;
+    transition: top 0.8s;
+    width: 350px;
     background-color: black;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
     border: solid 1px black;
+    align-content:center;
+    
+}
+
+#closebtn {
+    font-size: 25px;
+    margin-left: auto;
+    margin-top: 3px;
 }
 
 #overlay {
     display: none;
-    position: absolute;
+    position: relative;
     height: 100vh;
-    width: 110vw;
+    width: 100vw;
     z-index: 1;
     background-color: rgba(77, 72, 72, 0.616);
 }
@@ -44,7 +64,7 @@ table{
 .hd_dialog {
     display: flex;
     flex-direction: row;
-    background-color: navy;
+    background-color: rgb(104, 104, 129);
     color: white;
     height: 3em;
     padding: 5px;
@@ -64,7 +84,7 @@ table{
 .ft_dialog {
     display: flex;
     flex-direction: row;
-    background-color: navy;
+    background-color: rgb(104, 104, 129);
     color: white;
     height: 3em;
     padding: 0 0, 5em;
@@ -85,4 +105,3 @@ nav ul li {
     background-color: gray;
 
 }
-
