--- a/BasicWebProject/index.cshtml
+++ b/BasicWebProject/index.cshtml
@@ -11,28 +11,23 @@
     Session["file"] = file;
 }
 
-
 <html>
 <head>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/jquery-3.0.0.js"></script>
     <script src="https://kit.fontawesome.com/f19f1abdd8.js" crossorigin="anonymous"></script>
-    <script src="~/Scripts/Testdialog.js"></script>
+
     <link rel="stylesheet" type="text/css" href="~/Content/dialog.css" />
 </head>
 <body>
-
-
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
             <h1 class="display-4">C# Muziek Project</h1>
             <p class="lead">Dit is ons C# project om nummers te kunnen toevoegen, verwijderen en afspelen</p>
         </div>
     </div>
-
-   
-    <table class="table table-bordered">
+    <table class="table table-bordered ">
         <tr>
             <th>Id</th>
             <th>Artist</th>
@@ -41,10 +36,8 @@
             <th>Genre</th>
             <th>Time</th>
             <th>File</th>
+            <th>Delete</th>
         </tr>
-
-
-
         @foreach (DataRow dr in ds.Tables["songs"].Rows)
         {
             <tr>
@@ -56,18 +49,87 @@
                 <td>@dr["time"]</td>
                 <td>@dr["file"]</td>
                 <td><a href="~/pages/Deletesong.cshtml?id=@dr["id"]" id="delete" class="fa fa-trash"></a></td>
-
-
             </tr>
         }
+
     </table>
     <br /><br />
-          <div id="createsong">
-              <a href="pages/Createsong.cshtml">Een nieuwe song toevoegen</a>
-          </div>
-    <br/><br/>
-   
-</body>
+    
+    <br /><br />
 
+    <div id="createsong">
+        <a href="javascript: ShowDialog('inlog')">Voeg een Song toe</a>
+    </div>
+
+    <div id="overlay"></div>
+    <div id="dialog" class="dialog">
+        <div class="hd_dialog ">
+            <div id="hd_dialog_title"></div>
+
+            <i id="closebtn" onclick="CloseDialog()" class="fas fa-window-close"></i>
+        </div>
+        <div id="cn_dialog"></div>
+        <div class="ft_dialog ">Footer</div>
+    
+    
+
+        </div>
+
+<div id="content">
+    <form method="POST" id="hallo">
+        <table>
+            <tr>
+                <td>ID</td>
+                <td><input type="text" name="id" size="25"></td>
+            </tr>
+            <tr>
+                <td>Artiest</td>
+                <td><input type="text" name="artist" size="25"></td>
+            </tr>
+            <tr>
+                <td>Titel</td>
+                <td><input type="text" name="title" size="25"></td>
+            </tr>
+            <tr>
+                <td>Jaar</td>
+                <td><input type="text" name="year" size="25"></td>
+            </tr>
+            <tr>
+                <td>Genre</td>
+                <td><input type="text" name="genre" size="25"></td>
+            </tr>
+            <tr>
+                <td>Tijd</td>
+                <td><input type="text" name="time" size="25"></td>
+            </tr>
+            <tr>
+                <td>File</td>
+                <td><input type="text" name="file" size="25"></td>
+            </tr>
+            <tr>
+                <td><input type="submit" name="submit" value="Save"></td>
+            </tr>
+        </table>
+    </form>
+
+    @if (IsPost)
+    {
+        DataRow dr = mySongMethodes.GetEmptyDataRow();
+
+        dr[0] = Request.Form["id"];
+        dr[1] = Request.Form["artist"];
+        dr[2] = Request.Form["title"];
+        dr[3] = Request.Form["year"];
+        dr[4] = Request.Form["genre"];
+        dr[5] = Request.Form["time"];
+        dr[6] = Request.Form["file"];
+
+        mySongMethodes.CreateSong(dr, file);
+        Response.Redirect(@"~/index.cshtml");
+    }
+    </body>
+</html>
+</div>
+<script src="~/Scripts/Testdialog.js"></script>
 </html>
 
