dit is de allernieuwste omdat ik hem van jou moest uploaden 13-04-20

--- a/BasicWebProject/Content/dialog.css
+++ b/BasicWebProject/Content/dialog.css
@@ -6,7 +6,18 @@ table{
     background-color: lightgray;
 }
 
-#content{
+.iframeVideo{
+    width: 350px;
+    height: 280px;
+    float: right;
+    
+    display:flex;
+    flex-direction: column;
+}
+
+
+
+#content {
     display: none;
 }
 
