--- a/BasicWebProject/Content/dialog.css
+++ b/BasicWebProject/Content/dialog.css
@@ -15,6 +15,14 @@ table{
     flex-direction: column;
 }
 
+#overlay {
+    display: none;
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1;
+    background-color: rgba(77, 72, 72, 0.616);
+}
 
 
 #content {
@@ -70,14 +78,7 @@ table{
     display: none;
 }
 
-#overlay {
-    display: none;
-    position: relative;
-    height: 100vh;
-    width: 100vw;
-    z-index: 1;
-    background-color: rgba(77, 72, 72, 0.616);
-}
+
 
 .hd_dialog {
     display: flex;
